# electronic_store

./: .env.example  Readme.md  pyproject.toml
app/applications/account/: admin.py
app/applications/orders/: tasks.py
app/config/: settings.py  urls.py
docker/: .env.example  docker-compose.prod.yml
